Fix (unreported) Object's particle 'foreach_id` potentially accessing other IDs data.

Spotted while investigating #107860: Interactions with timeline after undo makes Blender crash.
Cannot reproduce any more crashes from this report.